# NormalModeCartesianTransformation

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark_ringpolymerdata.cpp  consistency_ringpolymerdata.cpp  test.cpp  test_benchmark.cpp  test_consistency.cpp  test_ringpolymerdata.cpp
.github/workflows/: build.yml  cmake-single-platform.yml
include/: ExplicitTransformation.h  FFTTransformation.h  NormalModeCartesianTransformation.h  RingPolymerData.h
src/: ExplicitTransformation.cpp  FFTTransformation.cpp  RingPolymerData.cpp
